# MasterCoder

./: .coverage  .gitignore  README.md  mastercoder.spec  pyproject.toml  run-automation.sh  run_req21_tests.sh  tool_executor.py  tool_registry.py  write_file.py
.github/workflows/: automation-pipeline.yml
core/: __init__.py  exception_handler.py  git_info.py  registry.py
core/security/: commands.py  sandbox.py
docs/: automation-tutorial.md  changelog.md  dev-guide.md  functions.md  mastercoder-automation.md  mastercoder-user-guide.md  product-spec.md  requirements.md  teams.md  tutorial-voiceover-full.md  tutorial-voiceover.md  video-script.md
scripts/: crewai_github_pat_smoke.py  crewai_glm_smoke.py
src/: git_detector.py  input_handler.py  message_manager.py  prompt_formatter.py  slash_commands.py  spinner.py  token_stats.py  tool_registry.py
src/mastercoder/: __init__.py  api_client.py  cli.py  config.py  context_manager.py  conversation.py  error_logger.py  git_info.py  input_handler.py  input_history.py  main.py  markdown_renderer.py  message_manager.py  retry.py  session.py  system_prompt.py
src/mastercoder/security/: __init__.py
src/mastercoder/tools/: __init__.py  base.py  edit_file.py  executor.py  list_files.py  read_file.py  registry.py  run_command.py  search_files.py  write_file.py
src/mastercoder_automation/: __init__.py  cli.py  config.py  crew_agents.py  dev_crew.py  gates.py  gh_client.py  models.py  openai_client.py  orchestrator.py  pr_human_gate.py  preflight.py  repo_ops.py  state_store.py
state/: req-status.example.json  req-status.json
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_config_strict.py  test_context_manager.py  test_edit_file.py  test_gates_unit.py  test_gh_client.py  test_git_info.py  test_list_files.py  test_main.py  test_markdown_renderer.py  test_mastercoder_main.py  test_message_manager.py  test_openai_client.py  test_orchestrator.py  test_preflight.py  test_read_file.py  test_repo_ops.py  test_req01.py  test_req05_conversation.py  test_req14_integration.py  test_req17_status_bar.py  test_req19_project_config.py  test_req21_input.py  test_req21_multiline_input.py  test_req22_context_manager.py  test_req24_cli_args.py  test_retry_and_error_handling.py  test_run_command.py  test_search_files.py  test_security.py  test_session_persistence.py  test_slash_commands.py  test_system_prompt_git.py  test_tool_executor.py  test_tool_registry.py  test_write_file.py
