[project]
name = "mastercoder-automation"
version = "0.1.0"
description = "Deterministic multi-agent software delivery pipeline using CrewAI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "crewai>=0.70.0",
  "pydantic>=2.8.0",
  "typer>=0.12.3,<0.17",
  "rich>=13.7.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.6.4",
]

[project.scripts]
mc-auto = "mastercoder_automation.cli:app"
mastercoder = "mastercoder.main:main"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mastercoder_automation", "src/mastercoder"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]

# 门禁 --cov=mastercoder_automation：排除仅能在集成环境跑通的模块（LLM / gh CLI）
[tool.coverage.run]
source = ["src/mastercoder_automation"]
omit = [
  "*/dev_crew.py",
  "*/crew_agents.py",
  "*/pr_human_gate.py",
]

[tool.coverage.report]
precision = 0
show_missing = true
